--- a/second/templates/second.html
+++ b/second/templates/second.html
@@ -14,14 +14,7 @@
         .im-color{
             color: #4ac1f7;
         }
-        .text_null_search{
-            font-size: 25px;
-            color: #0000FF;
-            font-family: Lora;
-            text-align: center;
-            margin-top: 30px;
-            margin-bottom: 50px;
-        }
+
         .main{
             display: flex;
             justify-content: space-around;
@@ -37,6 +30,14 @@
             margin-top: 30px;
             margin-bottom: 50px;
         }
+        .text_null_search_input{
+            font-size: 25px;
+            color: #ff003b;
+            font-family: Lora;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 50px;
+        }
         .parent{
             display: flex;
             justify-content: space-around;
@@ -44,16 +45,23 @@
             width: 100%;
             flex-direction: row;
         }
-        .colorError{
-            color: green;
-            border: 1px solid green;
+        .classNameUser{
+            {#color: green;#}
+            border: 1px solid blue;
+            border-radius: 4px;
+
         }
 
         .error{
             border: 1px solid red;
+            border-radius: 4px;
         }
         .success{
             border: 1px solid green;
+            border-radius: 4px;
+        }
+        .formClass{
+
         }
     </style>
     <H4  class="im-color">Второй хак по React</H4>
